add few changes for this and also added a ss

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <a href="#" class="y drum">y</a>
       </div>
     </div>
-    <script src="/index.js" />
+    <script src="/script.js" />
   </body>
 </html>
